@@ -1,3 +1,8 @@
+2008-10-27  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* POTFILES.in: Add RtmPreferencesWidget, which now has translatable
+	strings.
+
 2008-10-21  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
